# hfv1-cpp

./: .gitignore  CMakeLists.txt  HFV1_cpp.sln  MAIN.cpp  README.md  test.py
HFV1_cpp/: AssembledSolution.h  BarValues.h  BoundaryConditions.h  FaceValues.h  FlattenedDetails.h  FlattenedScaleCoeffs.h  Fluxes.h  HFV1_cpp.vcxproj  HFV1_cpp.vcxproj.filters  MAIN.cpp  NodalValues.h  SolverParameters.h  StarValues.h  baselineMesh.h  bedDataConservative.cpp  bedDataConservative.h  bed_data_c_property.h  decode1.cpp  decode2.cpp  decode2.h  decodeWithVector_pastebin.txt  decoding.cpp  decoding.h  encodeDetail.cpp  encodeDetail.h  encodeInitial.h  encodeScale.cpp  encodeScale.h  encode_scale.cpp  encoding.cpp  encoding.h  fluxHLL.cpp  fluxHLL.h  free_assembled_solution.cpp  free_assembled_solution.h  free_bar_values.cpp  free_bar_values.h  free_details.cpp  free_details.h  free_face_values.cpp  (+82 more)
classes/: AssembledSolution.h  BarValues.h  BoundaryConditions.h  FaceValues.h  Fluxes.h  StarValues.h
input/: set_boundary_conditions.cpp  set_boundary_conditions.h  set_simulation_parameters.cpp  set_simulation_parameters.h  set_solver_parameters.cpp  set_solver_parameters.h
mra/: decode1.cpp  decode1.h  decodeWithVector_pastebin.txt  decoding.h  encode_detail.cpp  encoding.cpp  encoding.h  extra_significance.cpp  extra_significance.h  get_max_scale_coefficients.cpp  get_max_scale_coefficients.h  get_modal_values.h  get_nodal_values.cpp  get_nodal_values.h  load_fine_scale_coefficients.h  maskFilterHaar.h  regularisation.h  traverse_tree_decode.h
operator/: bed_data_c_property.cpp  (+19 more)
(+44 files in other folders)
